--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: flutter_application_1
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,6 +17,9 @@ dependencies:
   flutter_slidable: ^3.0.1
   uuid: ^4.3.3
   shared_preferences: ^2.2.2
+  image_picker: ^1.0.7
+  path: ^1.8.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
